Debug data + fix catalog page

--- a/config/elasticsearch/mappings/deepspaceobjects.mapping.json
+++ b/config/elasticsearch/mappings/deepspaceobjects.mapping.json
@@ -30,7 +30,12 @@
           }
         },
         "order": {
-          "type": "integer"
+          "type": "text",
+          "fields": {
+            "keyword": {
+              "type": "keyword"
+            }
+          }
         },
         "updated_at": {
           "type": "date",
