--- a/docker/php7-fpm/www.conf
+++ b/docker/php7-fpm/www.conf
@@ -104,7 +104,7 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 20
+pm.max_children = 5
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
@@ -372,7 +372,7 @@ pm.max_spare_servers = 3
 ; Setting to "no" will make all environment variables available to PHP code
 ; via getenv(), $_ENV and $_SERVER.
 ; Default Value: yes
-clear_env = no
+;clear_env = no
 
 ; Limits the extensions of the main script FPM will allow to parse. This can
 ; prevent configuration mistakes on the web server side. You should only limit
@@ -411,11 +411,11 @@ clear_env = no
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
+php_flag[display_errors] = off
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
+php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-php_admin_value[upload_max_filesize] = 50M
-php_admin_value[post_max_size] = 50M
+;php_admin_value[upload_max_filesize] = 50M
+;php_admin_value[post_max_size] = 50M
 
-catch_workers_output = yes
+;catch_workers_output = yes
