--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "version": "1.1.0",
     "license": "proprietary",
     "require": {
-        "php": "^7.3.0",
+        "php": "^7.4.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "abraham/twitteroauth": "^1.1",
@@ -92,10 +92,9 @@
         }
     },
     "require-dev": {
-      "roave/security-advisories": "dev-master"
-      ,
+      "roave/security-advisories": "dev-master",
       "symfony/maker-bundle": "^1.12",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "^4.4"
+      "symfony/profiler-pack": "^1.0",
+      "symfony/var-dumper": "^4.4"
     }
 }
