--- a/config/services.yaml
+++ b/config/services.yaml
@@ -112,6 +112,7 @@ services:
         tags:
             -
                 name: doctrine.orm.entity_listener
+                event: postPersist
                 entity: App\Entity\BDD\ApiUser
                 lazy: true
 
