remove fix mapping

--- a/config/elasticsearch/mappings/constellations.mapping.json
+++ b/config/elasticsearch/mappings/constellations.mapping.json
@@ -89,8 +89,7 @@
           "type": "integer"
         },
         "order": {
-          "type": "integer",
-          "fielddata": true
+          "type": "integer"
         },
         "loc": {
           "type": "text"
