Add dev dependency

--- a/composer.json
+++ b/composer.json
@@ -92,8 +92,9 @@
         }
     },
     "require-dev": {
-      "symfony/maker-bundle": "^1.12",
-      "symfony/profiler-pack": "^1.0",
-      "symfony/var-dumper": "^4.4"
+        "roave/security-advisories": "dev-latest",
+        "symfony/maker-bundle": "^1.12",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/var-dumper": "^4.4"
     }
 }
