--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,24 +1,15 @@
 # Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
-fos_rest:
-    routing_loader:
-        default_format: json
-        include_format: false
-    body_listener: true
-    format_listener:
-        rules:
-            - { path: '^/api', priorities: [ json ], fallback_format: json, prefer_extension: true }
-    param_fetcher_listener:
-        enabled: true
-    access_denied_listener:
-        json: true
-    view:
-        view_response_listener: true
-        formats:
-            json: true
-    zone:
-        - { path: ^/api/* }
-    exception:
-        enabled: true
-        exception_controller: 'fos_rest.exception.controller:showAction'
-        codes:
-            { Elastica\Exception\NotFoundException: 404, \Exception: 500}
+fos_rest: null
+#    param_fetcher_listener:  true
+#    allowed_methods_listener:  true
+#    routing_loader: true
+#    view:
+#        view_response_listener:  true
+#    exception:
+#        codes:
+#            App\Exception\MyException: 403
+#        messages:
+#            App\Exception\MyException: Forbidden area.
+#    format_listener:
+#        rules:
+#            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
