--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,11 +1,15 @@
 monolog:
     handlers:
         main:
-            type:  rotating_file
-            path:  '%kernel.logs_dir%/%kernel.environment%.log'
+            type: fingers_crossed
             action_level: error
-            level: error
-            max_files: 10
+            handler: nested
+            excluded_http_codes: [404, 405]
+            buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+        nested:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            level: debug
         console:
             type: console
             process_psr_3_messages: false
