--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "symfony/validator": "^4.4",
         "symfony/webpack-encore-bundle": "^1.0",
         "symfony/yaml": "^4.4",
-        "twig/extensions": "^1.5"
+        "twig/twig": "^3.0"
     },
     "config": {
         "preferred-install": {
