--- a/composer.json
+++ b/composer.json
@@ -18,30 +18,30 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "ruflin/elastica": "^6.0",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "^4.4",
-        "symfony/console": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/expression-language": "^4.4",
+        "symfony/asset": "5.0.*",
+        "symfony/console": "5.0.*",
+        "symfony/dotenv": "5.0.*",
+        "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.1",
-        "symfony/form": "^4.4",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/google-mailer": "4.4.*",
-        "symfony/http-client": "4.4.*",
-        "symfony/intl": "^4.4",
-        "symfony/mailer": "4.4.*",
+        "symfony/form": "5.0.*",
+        "symfony/framework-bundle": "5.0.*",
+        "symfony/google-mailer": "5.0.*",
+        "symfony/http-client": "5.0.*",
+        "symfony/intl": "5.0.*",
+        "symfony/mailer": "5.0.*",
         "symfony/monolog-bundle": "^3.6",
         "symfony/orm-pack": "^1.0",
-        "symfony/process": "4.4.*",
+        "symfony/process": "5.0.*",
         "symfony/requirements-checker": "^1.1",
-        "symfony/security-bundle": "^4.4",
-        "symfony/serializer": "^4.4",
-        "symfony/stopwatch": "^4.4",
-        "symfony/templating": "^4.4",
-        "symfony/translation": "^4.4",
-        "symfony/twig-bundle": "^4.4",
-        "symfony/validator": "^4.4",
+        "symfony/security-bundle": "5.0.*",
+        "symfony/serializer": "5.0.*",
+        "symfony/stopwatch": "5.0.*",
+        "symfony/templating": "5.0.*",
+        "symfony/translation": "5.0.*",
+        "symfony/twig-bundle": "5.0.*",
+        "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "^4.4",
+        "symfony/yaml": "5.0.*",
         "twig/twig": "^3.0"
     },
     "config": {
@@ -87,13 +87,13 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.0.*"
         }
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "symfony/maker-bundle": "^1.12",
         "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "^4.4"
+        "symfony/var-dumper": "5.0.*"
     }
 }
