--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ parameters:
     tipeee.link: '%env(TIPEEE_PAGE)%'
     astrobinApiKey: '%env(ASTROBIN_API_KEY)%'
     astrobinApiSecret: '%env(ASTROBIN_API_SECRET)%'
+    memcachedUrl: '%env(MEMCACHED_URL)%'
 
 services:
     # default configuration for services in *this* file
@@ -31,6 +32,7 @@ services:
             $tipeeeLink: '%tipeee.link%'
             $senderMail: '%env(SENDER_MAIL)%'
             $receiverMail: '%env(GMAIL_MAIL)%'
+
 
     App\EventSubscriber\LocaleSubscriber:
         arguments: ['%kernel.default_locale%']
