Add updated date on dso

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -16,5 +16,4 @@ twig:
         twitter_name: '%env(TWITTER_ACCOUNT)%'
         twitterPage: '%env(TWITTER_PAGE)%'
         analyticsId: '%env(GOOGLE_ANALYTICS_ID)%'
-        path:
-            macros: 'helpers/icon.html.twig'
+        icon_sprite: 'build/images/markers'
