--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,8 +15,8 @@ parameters:
     astrobinApiKey: '%env(ASTROBIN_API_KEY)%'
     astrobinApiSecret: '%env(ASTROBIN_API_SECRET)%'
     memcachedUrl: '%env(MEMCACHED_URL)%'
-    displayPopupPage: 1
-    popupState: "enabled"
+    displayPopupPage: 2
+    popupState: "disabled"
 
 services:
     # default configuration for services in *this* file
