Refactoring prod cong nginx

--- a/docker/nginx/prod/nginx.conf
+++ b/docker/nginx/prod/nginx.conf
@@ -1,111 +1,93 @@
+# Run as a unique, less privileged user for security reasons.
 user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
 
+# Sets the worker threads to the number of CPU cores available in the system for
+# best performance. Should be > the number of CPU cores.
+worker_processes auto;
+
+# Maximum number of open files per worker process.
+worker_rlimit_nofile 8192;
+
+# Provides the configuration file context in which the directives that affect
+# connection processing are specified.
 events {
-	worker_connections 768;
-	# multi_accept on;
+	worker_connections 8000;
 }
 
+# Log errors and warnings to this file
+error_log /var/log/nginx/error.log warn;
+
+# The file storing the process ID of the main process
+pid /run/nginx.pid;
+
+include /etc/nginx/modules-enabled/*.conf;
+
 http {
-	# don't send the nginx version number in error pages and Server header
-	server_tokens off;
+  # Hide Nginx version information.
+  include configuration/security/server_software_information.conf;
 
-	# config to don't allow the browser to render the page inside an frame or iframe
-	# and avoid clickjacking http://en.wikipedia.org/wiki/Clickjacking
-	# if you need to allow [i]frames, you can use SAMEORIGIN or even set an uri with ALLOW-FROM uri
-	# https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
-	add_header X-Frame-Options "SAMEORIGIN";
+  # Specify media (MIME) types for files.
+  include configuration/media_types/media_types.conf;
+  # Set character encodings.
+  include configuration/media_types/character_encodings.conf;
 
-	# when serving user-supplied content, include a X-Content-Type-Options: nosniff header along with the Content-Type: header,
-	# to disable content-type sniffing on some browsers.
-	# https://www.owasp.org/index.php/List_of_useful_HTTP_headers
-	# currently suppoorted in IE > 8 http://blogs.msdn.com/b/ie/archive/2008/09/02/ie8-security-part-vi-beta-2-update.aspx
-	# http://msdn.microsoft.com/en-us/library/ie/gg622941(v=vs.85).aspx
-	# 'soon' on Firefox https://bugzilla.mozilla.org/show_bug.cgi?id=471020
-	add_header X-Content-Type-Options nosniff;
+  # Log access to this file
+	access_log /var/log/nginx/access.log;
 
-	# This header enables the Cross-site scripting (XSS) filter built into most recent web browsers.
-	# It's usually enabled by default anyway, so the role of this header is to re-enable the filter for
-	# this particular website if it was disabled by the user.
-	# https://www.owasp.org/index.php/List_of_useful_HTTP_headers
-	add_header X-XSS-Protection "1; mode=block";
+  # How long to allow each connection to stay idle.
+  # Longer values are better for each individual client, particularly for SSL,
+  # but means that worker connections are tied up longer.
+  # Default: 75s, previous: 65
+  keepalive_timeout 20s;
 
-	# with Content Security Policy (CSP) enabled(and a browser that supports it(http://caniuse.com/#feat=contentsecuritypolicy),
-	# you can tell the browser that it can only download content from the domains you explicitly allow
-	# http://www.html5rocks.com/en/tutorials/security/content-security-policy/
-	# https://www.owasp.org/index.php/Content_Security_Policy
-	# I need to change our application code so we can increase security by disabling 'unsafe-inline' 'unsafe-eval'
-	# directives for css and js(if you have inline css or js, you will need to keep it too).
-	# more: http://www.html5rocks.com/en/tutorials/security/content-security-policy/#inline-code-considered-harmful
-	add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ssl.google-analytics.com https://assets.zendesk.com https://connect.facebook.net; img-src 'self' https://ssl.google-an
-alytics.com https://s-static.ak.facebook.com https://assets.zendesk.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://assets.zendesk.com; font-src 'self' https://themes.googleusercontent.com; frame-src https://ass
-ets.zendesk.com https://www.facebook.com https://s-static.ak.facebook.com https://tautt.zendesk.com; object-src 'none'";
+  # Speed up file transfers by using `sendfile()` to copy directly between
+  # descriptors rather than using `read()`/`write()``.
+  # For performance reasons, on FreeBSD systems w/ ZFS this option should be
+  # disabled as ZFS's ARC caches frequently used files in RAM by default.
+  # Default: off
+  # https://nginx.org/en/docs/http/ngx_http_core_module.html#sendfile
+  sendfile on;
 
-	add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
-
-	##
-	# Protect
-	#
-	# Requete maximun par ip
-	limit_req_zone $binary_remote_addr zone=flood:10m rate=100r/s;
-	limit_req zone=flood burst=100 nodelay;
-
-	# Connexions maximum par ip
-	limit_conn_zone $binary_remote_addr zone=ddos:10m;
-	limit_conn ddos 100;
-
-
-	##
-	# Basic Settings
-	##
-
-	sendfile on;
-	tcp_nopush on;
+  # Don't send out partial frames; this increases throughput since TCP frames
+  # are filled up before being sent out.
+  # Default: off
+  # https://nginx.org/en/docs/http/ngx_http_core_module.html#tcp_nopush
+  tcp_nopush on;
 	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	# server_tokens off;
 
+  # Enable gzip compression.
+  include configuration/web_performance/compression.conf;
+  # Specify file cache expiration.
+  include configuration/web_performance/cache_expiration.conf;
+
+  # Add X-XSS-Protection for HTML documents.
+  include configuration/security/x-xss-protection.conf
+
+  # Add X-Frame-Options for HTML documents.
+  include configuration/security/x-frame-options.conf
+
+  # Add Content-Security-Policy for HTML documents.
+  include configuration/security/content-security-policy.conf
+
+  # Add Strict-Transport-Security
+  include configuration/security/strict-transport-security.conf
+
+  include configuration/security/x-content-type-options.conf;
+
+  # Add Referrer-Policy for HTML documents.
+  include configuration/security/referrer-policy.conf
+
+  # Add X-UA-Compatible for HTML documents.
+  # include configuration/internet_explorer/x-ua-compatible.conf
+
+  # Protect IP
+  include configuration/security/protect_ip.conf
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
-
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
-
-	##
-	# SSL Settings
-	##
-
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-	ssl_prefer_server_ciphers on;
-
-	##
-	# Logging Settings
-	##
-
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
-
-	##
-	# Gzip Settings
-	##
-
-	gzip on;
-	gzip_disable "msie6"
-
-	gzip_vary on;
-	gzip_proxied any;
-	gzip_comp_level 6;
-	gzip_buffers 16 8k;
-	gzip_http_version 1.1;
-	gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
 	##
 	# Virtual Host Configs
 	##
-
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
