--- a/docker/nginx/prod/symfony.prod.https.conf
+++ b/docker/nginx/prod/symfony.prod.https.conf
@@ -1,40 +1,5 @@
 server {
-    listen 80;
-    listen [::]:80;
-
-    server_name astro-otter.space;
-    root /var/www/deep-space-objects/public;
-    index index.php
-    client_max_body_size 20M;
-
-    location / {
-        try_files $uri /index.php$is_args$args;
-    }
-
-    location ~ ^/(index)\.php(/|$) {
-        fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        internal;
-    }
-
-    location ~ \.php$ {
-        #return 404;
-    }
-
-    location ~ /\.(?:ht|git|svn) {
-        deny all;
-    }
-
-    error_log /var/log/nginx/astro-otter_error.log;
-    access_log /var/log/nginx/astro-otter_access.log;
-}
-
-stephane@vps773218:/etc/nginx/sites-available$ more nginx_https.conf
-server {
-	listen 80;
+  listen 80;
 	listen [::]:80;
 	server_name astro-otter.space www.astro-otter.space;
 	return 301 https://$server_name$request_uri;
@@ -42,78 +7,73 @@ server {
 
 server {
 	listen 443 ssl http2;
-    	listen [::]:443 ssl;
-    	server_name astro-otter.space www.astro-otter.space;
+  listen [::]:443 ssl;
+  server_name astro-otter.space www.astro-otter.space;
 
-    	root /var/www/deep-space-objects/public;
-    	index index.php
-    	client_max_body_size 20M;
+  root /var/www/deep-space-objects/public;
+  index index.php
+  client_max_body_size 20M;
 
-    	# Symfony
+  # Symfony
 	location / {
 		try_files $uri /index.php$is_args$args;
 	}
 
 	location ~ ^/(index)\.php(/|$) {
-        	fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+    fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
 		fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        	include fastcgi_params;
+    include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        	fastcgi_param DOCUMENT_ROOT $realpath_root;
-        	internal;
+    fastcgi_param DOCUMENT_ROOT $realpath_root;
+    internal;
 	}
 
 	location ~* \.(ico|css|js|gif|jpeg|jpg|png|webp|woff|ttf|otf|svg|woff2|eot)$ {
-       		expires 1d;
-       		access_log off;
-       		add_header Pragma public;
-       		add_header Cache-Control "public, max-age=86400";
-       		add_header X-Asset "yes";
-   	}
+    expires 1d;
+    access_log off;
+    add_header Pragma public;
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Asset "yes";
+  }
 
 	location ~ \.php$ {
 		#return 404;
 	}
 
 	location ~ /\.(?:ht|git|svn) {
-        	deny all;
-    	}
-
+    deny all;
+  }
 
 	error_log /var/log/nginx/astro-otter_error.log;
 	access_log /var/log/nginx/astro-otter_access.log;
 
-    #########################
-    # Conf HTTPS
-    #########################
-    # Certificate
-    # Lets encrypt
-    ssl_certificate /etc/letsencrypt/live/astro-otter.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/astro-otter.space/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/astro-otter.space/chain.pem;
+  #########################
+  # Conf HTTPS
+  #########################
+  # Certificate
+  # Lets encrypt
+  include configuration/ssl/certificate_files.conf
 
-    # SSL Protocols
-    ssl_protocols TLSv1.2 TLSv1.3;
+  # TLS parameters / Cache
+  include configuration/ssl/ssl_engine.conf
 
-    # ECDH
-    ssl_dhparam /etc/nginx/ssl/dh.pem;
-    ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
+  # SSL Protocols
+  ssl_protocols TLSv1.2 TLSv1.3;
 
-    # Ciphers
-    ssl_ciphers EECDH+AESGCM:EECDH+CHACHA20:EECDH+AES;
-    ssl_prefer_server_ciphers on;
+  # ECDH
+  ssl_dhparam /etc/nginx/ssl/dh.pem;
+  ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
 
-    # OCSP Stapling
-    resolver 80.67.169.12 80.67.169.40 valid=300s;
-    resolver_timeout 5s;
-    ssl_stapling on;
-    ssl_stapling_verify on;
+  # Ciphers
+  ssl_ciphers EECDH+AESGCM:EECDH+CHACHA20:EECDH+AES;
 
-    # TLS parameters / Cache
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 5m;
-    ssl_session_tickets off;
+  # OCSP Stapling
+  resolver 80.67.169.12 80.67.169.40 valid=300s;
+  resolver_timeout 5s;
+  ssl_stapling on;
+  ssl_stapling_verify on;
 
-    # HTTP Strict Transport Security (HSTS)
-    add_header Strict-Transport-Security "max-age=15552000; preload";
+
+  # HTTP Strict Transport Security (HSTS)
+  add_header Strict-Transport-Security "max-age=15552000; preload";
 }
