--- a/docker/nginx/prod/symfony.prod.https.conf
+++ b/docker/nginx/prod/symfony.prod.https.conf
@@ -40,10 +40,6 @@ server {
 		#return 404;
 	}
 
-	location ~ /\.(?:ht|git|svn) {
-    deny all;
-  }
-
 	error_log /var/log/nginx/astro-otter_error.log;
 	access_log /var/log/nginx/astro-otter_access.log;
 
@@ -52,28 +48,26 @@ server {
   #########################
   # Certificate
   # Lets encrypt
-  include configuration/ssl/certificate_files.conf
+  include /etc/nginx/configuration/ssl/certificate_files.conf
 
   # TLS parameters / Cache
-  include configuration/ssl/ssl_engine.conf
+  include /etc/nginx/configuration/ssl/ssl_engine.conf
 
-  # SSL Protocols
-  ssl_protocols TLSv1.2 TLSv1.3;
+  # SSL Protocols + Ciphers
+  include /etc/nginx/configuration/ssl/ssl_protocols.conf
 
   # ECDH
-  ssl_dhparam /etc/nginx/ssl/dh.pem;
-  ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
-
-  # Ciphers
-  ssl_ciphers EECDH+AESGCM:EECDH+CHACHA20:EECDH+AES;
+  include /etc/nginx/configuration/ssl/ssl_ecdh.conf
 
   # OCSP Stapling
-  resolver 80.67.169.12 80.67.169.40 valid=300s;
-  resolver_timeout 5s;
-  ssl_stapling on;
-  ssl_stapling_verify on;
+  include /etc/nginx/configuration/ssl/ocsp_stapling.conf
 
-
-  # HTTP Strict Transport Security (HSTS)
-  add_header Strict-Transport-Security "max-age=15552000; preload";
+  # Basics
+  include /etc/nginx/configuration/internet_explorer/x-ua-compatible.conf;
+  include /etc/nginx/configuration/security/referrer-policy.conf;
+  include /etc/nginx/configuration/security/x-content-type-options.conf;
+  include /etc/nginx/configuration/security/x-frame-options.conf;
+  include /etc/nginx/configuration/security/x-xss-protection.conf;
+  include /etc/nginx/configuration/location/security_file_access.conf;
+  include /etc/nginx/configuration/cross-origin/requests.conf;
 }
