--- a/docker/nginx/prod/configuration/cross-origin/requests.conf
+++ b/docker/nginx/prod/configuration/cross-origin/requests.conf
@@ -15,4 +15,4 @@
 #
 #         add_header Access-Control-Allow-Origin "subdomain.example.com";
 
-# add_header Access-Control-Allow-Origin $cors;
+add_header Access-Control-Allow-Origin "astrobin.com";
