--- a/docker/nginx/prod/nginx.conf
+++ b/docker/nginx/prod/nginx.conf
@@ -65,27 +65,27 @@ http {
   include /etc/nginx/sites-enabled/*;
 
   # Add X-XSS-Protection for HTML documents.
-  include configuration/security/x-xss-protection.conf
+  include configuration/security/x-xss-protection.conf;
 
   # Add X-Frame-Options for HTML documents.
-  include configuration/security/x-frame-options.conf
+  include configuration/security/x-frame-options.conf;
 
   # Add Content-Security-Policy for HTML documents.
-  include configuration/security/content-security-policy.conf
+  include configuration/security/content-security-policy.conf;
 
   # Add Strict-Transport-Security
-  include configuration/security/strict-transport-security.conf
+  include configuration/security/strict-transport-security.conf;
 
   include configuration/security/x-content-type-options.conf;
 
   # Add Referrer-Policy for HTML documents.
-  include configuration/security/referrer-policy.conf
+  include configuration/security/referrer-policy.conf;
 
   # Add X-UA-Compatible for HTML documents.
   # include configuration/internet_explorer/x-ua-compatible.conf
 
   # Protect IP
-  include configuration/security/protect_ip.conf
+  include configuration/security/protect_ip.conf;
   # server_names_hash_bucket_size 64;
   # server_name_in_redirect off;
 }
