--- a/docker/nginx/prod/symfony.prod.https.conf
+++ b/docker/nginx/prod/symfony.prod.https.conf
@@ -48,19 +48,19 @@ server {
   #########################
   # Certificate
   # Lets encrypt
-  include /etc/nginx/configuration/ssl/certificate_files.conf
+  include /etc/nginx/configuration/ssl/certificate_files.conf;
 
   # TLS parameters / Cache
-  include /etc/nginx/configuration/ssl/ssl_engine.conf
+  include /etc/nginx/configuration/ssl/ssl_engine.conf;
 
   # SSL Protocols + Ciphers
-  include /etc/nginx/configuration/ssl/ssl_protocols.conf
+  include /etc/nginx/configuration/ssl/ssl_protocols.conf;
 
   # ECDH
-  include /etc/nginx/configuration/ssl/ssl_ecdh.conf
+  include /etc/nginx/configuration/ssl/ssl_ecdh.conf;
 
   # OCSP Stapling
-  include /etc/nginx/configuration/ssl/ocsp_stapling.conf
+  include /etc/nginx/configuration/ssl/ocsp_stapling.conf;
 
   # Basics
   include /etc/nginx/configuration/internet_explorer/x-ua-compatible.conf;
