--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.4"
 
 networks:
     dso_stack:
@@ -8,22 +8,31 @@ volumes:
     es_data:
         driver: local
     db_data: {}
+    php_socket:
 
 services:
     # PHP
     php:
         build:
             context: docker/php7-fpm
+            target: symfony_php
             args:
+                SYMFONY_VERSION: ${SYMFONY_VERSION:-}
+                STABILITY: ${STABILITY:-stable}
                 TIMEZONE: ${TIMEZONE}
-        user: "${SITE_UID:-1000}:${SITE_GID:-1000}"
         restart: unless-stopped
+        healthcheck:
+            interval: 10s
+            timeout: 3s
+            retries: 3
+            start_period: 30s
+        user: "${SITE_UID:-1000}:${SITE_GID:-1000}"
         container_name: dso_php
         hostname: php
         volumes:
-            - ".:/var/www/deep-space-objects:rw"
-            -  "./docker/php7-fpm/pool.d/application.conf:/opt/docker/etc/php/fpm/pool.d/application.conf"
-            - "./docker/php7-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
+            - php_socket:/var/run/php
+            - ./:/var/www/deep-space-objects:rw,cached
+            - ./docker/php7-fpm/conf.d/symfony.dev.ini:/usr/local/etc/php/conf.d/symfony.ini
             - "$SSH_AUTH_SOCK:/ssh-agent:ro"
         env_file:
           - ".env"
@@ -46,8 +55,8 @@ services:
         container_name: dso_nginx
         hostname: nginx
         ports:
-            - 80:80
-            - 443:443
+            - "80:80"
+            - "443:443"
         depends_on:
             - php
         volumes:
@@ -77,7 +86,7 @@ services:
                 soft: -1
                 hard: -1
         ports:
-            - 9200:9200
+            - "9200:9200"
         networks:
             - dso_stack
 
@@ -95,7 +104,7 @@ services:
             - MYSQL_USER=${DB_USER}
             - MYSQL_PASSWORD=${DB_PASSWORD}
         ports:
-          - 3307:3306
+          - "3307:3306"
         networks:
           - dso_stack
 
@@ -114,7 +123,7 @@ services:
         links:
             - elasticsearch
         ports:
-            - 5601:5601
+            - "5601:5601"
         networks:
             - dso_stack
 
